<resources>
    <string name="app_name">Filmstock</string>

    <!-- Generic -->
    <string name="no_internet">It looks like you\'re offline!</string>
    <string name="no_internet_greeting">Oops!</string>
    <string name="no_internet_verify_connection">Check your connection and try again. :)</string>
    <string name="generic_server_error">There was a error on the server. :/</string>
    <string name="generic_server_connection_error">We could not connect to the server D: \n\nPlease try again.</string>
    <string name="generic_server_connection_error_suggestion">Would you mind trying it again?</string>
    <string name="generic_reconnect">Try again</string>
    <string name="generic_placeholder_text">-</string>

    <!-- Content Descriptions -->
    <string name="splash_filmstock_logo">Filmstock Logo</string>
    <string name="splash_filmstock_background">Filmstock Background</string>

    <!-- Main -->
    <string name="main_movie_info">{genre} • {year} • {runtime}</string>
    <string name="main_no_items_greeting_text">Hey there!</string>
    <string name="movie_no_items_text">It looks like you don\'t have any saved movies.</string>
    <string name="movie_no_items_suggestion_text">How about trying to search for some? Click on the search icon above and start searching!</string>
    <string name="main_saved_on_text">Saved on {date}</string>

    <!-- Movie Detail -->
    <string name="movie_detail_text">Details</string>
    <string name="movie_detail_movie_year_runtime">{movieYear} • {runtime}</string>
    <string name="movie_detail_genre_label">Genre</string>
    <string name="movie_detail_cast_label">Cast</string>
    <string name="movie_detail_director_label">Directed by</string>
    <string name="movie_detail_ratings_label">IMDB Rating</string>
    <string name="movie_detail_writer_label">Written by</string>
    <string name="movie_detail_rated_label">Rated</string>
    <string name="movie_detail_awards_label">Awards</string>
    <string name="movie_detail_language_label">Language</string>
    <string name="movie_detail_country_label">Country</string>
    <string name="movie_detail_production_label">Produced by</string>
    <string name="movie_detail_released_label">Released</string>
    <string name="movie_detail_boxoffice_label">Box Office</string>
    <string name="movie_detail_success_save_message">Movie saved!</string>
    <string name="movie_detail_success_unsave_message">Movie unsaved!</string>
    <string name="movie_detail_wait_message">Wait a sec, we\'re loading the stuff…</string>

    <!-- Movie Search -->
    <string name="movie_search_text">Type a movie name…</string>
    <string name="movie_search_no_results_greeting_text">Nothing…</string>
    <string name="movie_search_no_results_text">No results were found :(</string>
    <string name="movie_search_no_results_suggestion_text">How about trying something different?</string>
    <string name="movie_search_title_text">{name} • ({year})</string>
    <string name="movie_search_too_many_results_greeting_text">Err…</string>
    <string name="movie_search_too_many_results_error_text">Sorry, but that was a bit too generic…</string>
    <string name="movie_search_too_many_results_suggestion_text">How about trying something a little more specific?</string>

</resources>
