<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_gradient_dark">

    <!-- No internet icon -->
    <ImageView
        android:id="@+id/no_internet_image"
        android:layout_width="@dimen/image_default_size"
        android:layout_height="@dimen/image_default_size"
        android:src="@drawable/ic_signal_wifi_off_white"
        android:alpha="0.5"/>

    <!-- Greeting text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_large_margin"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/font_size_large"
        android:textColor="@android:color/white"
        android:text="@string/no_internet_greeting"/>

    <!-- No internet text -->
    <TextView
        android:id="@+id/no_internet_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/font_size_medium_large"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/default_medium_margin"
        android:alpha="0.5"
        android:text="@string/no_internet"/>

    <TextView
        android:id="@+id/no_internet_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/font_size_medium_large"
        android:textColor="@android:color/white"
        android:alpha="0.5"
        android:text="@string/no_internet_verify_connection"/>

    <Button
        android:id="@+id/no_internet_reconnect_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_default_height"
        android:text="@string/generic_reconnect"
        style="@style/ButtonStyleDefault"/>

</LinearLayout>