<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/bg_gradient_dark">

    <!-- No internet icon -->
    <ImageView
        android:layout_width="@dimen/image_default_size"
        android:layout_height="@dimen/image_default_size"
        android:layout_marginTop="@dimen/default_extra_large_margin"
        android:src="@drawable/ic_shrug"/>

    <!-- Greeting text -->
    <TextView
        android:id="@+id/no_items_greeting_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/default_large_margin"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/font_size_large"
        android:textColor="@android:color/white"
        android:text="@string/movie_search_no_results_greeting_text"/>

    <!-- No internet text -->
    <TextView
        android:id="@+id/no_items_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/font_size_medium_large"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/default_medium_margin"
        android:alpha="0.5"
        android:text="@string/movie_search_no_results_text"/>

    <!-- Suggestion text -->
    <TextView
        android:id="@+id/no_items_error_suggestion_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/font_size_medium_large"
        android:textColor="@android:color/white"
        android:alpha="0.5"
        android:text="@string/movie_search_no_results_suggestion_text"/>

</LinearLayout>